fix(mainlayout): Remove overflow

--- a/components/templates/MainLayout/MainLayout.module.scss
+++ b/components/templates/MainLayout/MainLayout.module.scss
@@ -10,6 +10,8 @@
   max-width: 1024px;
   justify-content: center;
   align-content: center;
+  overflow: hidden;
+  position: relative;
   &__background {
     position: absolute;
     height: 280px;
